--- a/index.html
+++ b/index.html
@@ -2,170 +2,60 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 丹田呼吸 V5</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>丹田呼吸 V6</title>
     <style>
-        body { font-family: -apple-system, "Microsoft JhengHei", sans-serif; background-color: #f0f4f8; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; margin: 0; color: #333; touch-action: manipulation; }
-        .container { background: white; padding: 2rem; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); text-align: center; max-width: 400px; width: 90%; }
-        h1 { margin-top: 0; color: #2c3e50; font-size: 1.8rem; }
-        .settings { display: flex; justify-content: space-around; margin-bottom: 20px; gap: 10px; }
-        .input-group { display: flex; flex-direction: column; }
-        .input-group label { font-size: 0.9rem; margin-bottom: 5px; color: #666; }
-        input[type="number"] { padding: 10px; font-size: 1.2rem; border: 2px solid #ddd; border-radius: 8px; width: 70px; text-align: center; }
-        .display-area { margin: 20px 0; min-height: 140px; }
-        .status-text { font-size: 2.2rem; font-weight: bold; color: #3498db; margin-bottom: 5px; min-height: 3.5rem; }
-        .timer { font-size: 4.5rem; font-weight: bold; margin: 0; line-height: 1.2; }
-        .sets-info { font-size: 1.1rem; color: #7f8c8d; margin-top: 10px; }
-        button { background-color: #2ecc71; color: white; border: none; padding: 15px 0; font-size: 1.4rem; border-radius: 50px; cursor: pointer; width: 100%; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        button:disabled { background-color: #bdc3c7; }
-        .inhaling .status-text { color: #2ecc71; }
-        .exhaling .status-text { color: #e74c3c; }
+        body { font-family: sans-serif; background: #f0f4f8; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        .box { background: white; padding: 30px; border-radius: 20px; text-align: center; width: 85%; box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
+        .timer { font-size: 5rem; font-weight: bold; margin: 20px 0; }
+        .status { font-size: 2rem; color: #3498db; min-height: 3rem; }
+        button { background: #2ecc71; color: white; border: none; padding: 20px; font-size: 1.5rem; border-radius: 50px; width: 100%; cursor: pointer; }
+        button:active { background: #27ae60; transform: scale(0.98); }
     </style>
 </head>
 <body>
-
-<div class="container" id="app">
-    <h1>丹田呼吸訓練</h1>
-    <div class="settings">
-        <div class="input-group">
-            <label>每段秒數</label>
-            <input type="number" id="secInput" value="15">
-        </div>
-        <div class="input-group">
-            <label>總組數</label>
-            <input type="number" id="setInput" value="10">
-        </div>
+    <div class="box">
+        <h2 id="msg">丹田呼吸訓練</h2>
+        <div class="status" id="st">準備開始</div>
+        <div class="timer" id="tm">00</div>
+        <button id="btn" onclick="start()">開始練習</button>
     </div>
-    <div class="display-area">
-        <div class="status-text" id="statusText">準備開始</div>
-        <div class="timer" id="timerDisplay">00</div>
-        <div class="sets-info" id="setsDisplay">組數: 0 / 0</div>
-    </div>
-    <button id="btnStart" onclick="initAndStart()">開始練習</button>
-</div>
-
 <script>
-    let timerInterval = null;
-    let isRunning = false;
-    let targetSeconds, targetSets, currentSet, currentSec;
     const synth = window.speechSynthesis;
-
-    // 解鎖音訊並開始
-    function initAndStart() {
-        if (isRunning) return;
-        // 播放空白音解鎖
-        const unlock = new SpeechSynthesisUtterance("");
-        synth.speak(unlock);
-        startPractice();
+    function speak(txt, cb) {
+        synth.cancel();
+        const u = new SpeechSynthesisUtterance(txt);
+        u.lang = 'zh-TW';
+        u.onend = () => { if(cb) cb(); };
+        synth.speak(u);
+        if(cb) setTimeout(cb, txt.length * 400 + 1000);
     }
-
-    // 強化版語音函數：支援接力 (callback)
-    function speak(text, callback) {
-        // 不要 cancel，讓語音排隊自然說完，除非是「停」
-        if (text === "停") synth.cancel();
-
-        const utterance = new SpeechSynthesisUtterance(text);
-        utterance.lang = 'zh-TW';
-        utterance.rate = 1.0;
-
-        // 監聽結束
-        utterance.onend = () => {
-            if (callback) {
-                setTimeout(callback, 50); // 稍微緩衝
-                callback = null; // 防止 iOS 重複觸發
-            }
-        };
-
-        // 安卓保險機制
-        setTimeout(() => {
-            if (callback) {
-                callback();
-                callback = null;
-            }
-        }, text.length * 500 + 800); // 根據字數動態估計時間
-
-        synth.speak(utterance);
-    }
-
-    function startPractice() {
-        targetSeconds = parseInt(document.getElementById('secInput').value);
-        targetSets = parseInt(document.getElementById('setInput').value);
-        
-        isRunning = true;
-        document.getElementById('btnStart').disabled = true;
-        currentSet = 1;
-        updateUI();
-
-        // 確保這串話講完才進倒數
-        const intro = `丹田呼吸，${targetSeconds}秒，${targetSets}組練習。`;
-        speak(intro, () => {
-            runCountdown(3);
+    function start() {
+        document.getElementById('btn').disabled = true;
+        document.getElementById('btn').innerText = "練習中...";
+        speak("丹田呼吸，15秒10組練習。3。2。1。", () => {
+            inhale();
         });
     }
-
-    function runCountdown(count) {
-        if (count > 0) {
-            document.getElementById('statusText').innerText = count;
-            speak(String(count), () => {
-                setTimeout(() => runCountdown(count - 1), 500);
-            });
-        } else {
-            speakInhale();
-        }
+    function inhale() {
+        document.getElementById('st').innerText = "吸氣";
+        speak("吸氣", () => count(15, "exhale"));
     }
-
-    function speakInhale() {
-        document.getElementById('statusText').innerText = "吸氣";
-        document.getElementById('app').className = "container inhaling";
-        speak("吸氣", () => startTimer("exhale"));
+    function exhale() {
+        document.getElementById('st').innerText = "吐氣";
+        speak("吐氣", () => count(15, "inhale"));
     }
-
-    function speakExhale() {
-        document.getElementById('statusText').innerText = "吐氣";
-        document.getElementById('app').className = "container exhaling";
-        speak("吐氣", () => startTimer("next"));
-    }
-
-    function startTimer(nextPhase) {
-        currentSec = targetSeconds;
-        refreshTimerDisplay();
-        clearInterval(timerInterval);
-        timerInterval = setInterval(() => {
-            currentSec--;
-            refreshTimerDisplay();
-            if (currentSec <= 0) {
-                clearInterval(timerInterval);
-                if (nextPhase === "exhale") speakExhale();
-                else checkSets();
+    function count(s, next) {
+        let c = s;
+        const iv = setInterval(() => {
+            document.getElementById('tm').innerText = c < 10 ? '0'+c : c;
+            if(c <= 0) {
+                clearInterval(iv);
+                if(next === "exhale") exhale();
+                else inhale();
             }
+            c--;
         }, 1000);
-    }
-
-    function checkSets() {
-        if (currentSet < targetSets) {
-            currentSet++;
-            updateUI();
-            setTimeout(speakInhale, 400); 
-        } else {
-            document.getElementById('statusText').innerText = "完成";
-            speak("停", reset);
-        }
-    }
-
-    function reset() {
-        isRunning = false;
-        document.getElementById('btnStart').disabled = false;
-        document.getElementById('statusText').innerText = "準備開始";
-        document.getElementById('app').className = "container";
-        clearInterval(timerInterval);
-    }
-
-    function updateUI() {
-        document.getElementById('setsDisplay').innerText = `組數: ${currentSet} / ${targetSets}`;
-    }
-
-    function refreshTimerDisplay() {
-        document.getElementById('timerDisplay').innerText = currentSec < 10 ? "0" + currentSec : currentSec;
     }
 </script>
 </body>
